update readme and package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
 	"displayName": "MokaLinguijs",
 	"description": "",
 	"version": "0.0.1",
+	"publisher": "lishunyang",
+	"repository": {
+    "type": "git",
+    "url": "https://github.com/southerncross/mokalinguijs.git"
+  },
 	"engines": {
 		"vscode": "^1.36.0"
 	},
@@ -25,7 +30,7 @@
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^10.12.21",
-		"@types/vscode": "^1.37.0",
+		"@types/vscode": "^1.36.0",
 		"glob": "^7.1.4",
 		"mocha": "^6.1.4",
 		"typescript": "^3.3.1",
